[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Game_objects/Obj_Hyenard_Flame_Thrower.gd" type="Script" id=2]

[node name="Obj_Flame_Thrower" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.28125, 0.28125 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="On_off_timer" type="Timer" parent="."]

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="timeout" from="On_off_timer" to="." method="_on_On_off_timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
